# spellcards-latex

./: .chktexrc  .gitattributes  .gitignore  .latexmkrc  Dockerfile  LICENSE  README.md  a6-on-a4.cfg  a7-on-a4.cfg  einstellungen.tex  latexmkrc  pyproject.toml  run_gui.sh  spellcards.tex  vorlage.tex
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
content/: anhang.tex  glossar.tex  grundlagen.tex
docs/: api-reference.md  expl3-modernization-plan.md  generator-guide.md  phase1-completion-summary.md  phase2-completion-summary.md  phase5-integration-test-results.md  user-guide.md
misc/: make.bat  makefile
preamble/: commands.tex  import-data.tex  preamble.tex
spell_card_generator/: .pylintrc  README.md  __init__.py  agent-plan.md  app.py  cli.py  main.py  pyproject.toml  pytest.ini  requirements.txt  spell_card_generator.py  spell_card_generator.sh  tox.ini
spell_card_generator/config/: __init__.py  constants.py
spell_card_generator/data/: __init__.py  filter.py  loader.py
spell_card_generator/generators/: __init__.py  latex_generator.py
spell_card_generator/models/: __init__.py  spell.py
spell_card_generator/tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_attack_roll_detection.py  test_class_categorization.py  test_exceptions.py  test_file_scanner.py  test_file_scanner_extract_description.py  test_file_scanner_find_existing.py  test_filter.py  test_latex_generator.py  test_loader.py  test_property_extraction.py  test_spell.py  test_validators.py  test_width_ratio_preservation.py
spell_card_generator/tests/ui/: test_workflow_coordinator.py  test_workflow_navigation.py  test_workflow_state.py
spell_card_generator/tests/ui/steps/: __init__.py  test_base_step.py  test_class_selection_navigation.py  test_class_selection_step.py  test_documentation_urls_navigation.py  test_documentation_urls_step.py  test_overwrite_cards_navigation.py  test_overwrite_cards_step.py  test_preview_generate_navigation.py  test_preview_generate_step.py  test_spell_selection_navigation.py  test_spell_selection_step.py
spell_card_generator/tests/ui/widgets/: __init__.py
spell_card_generator/ui/: __init__.py  class_placeholder.py  class_selection.py  dialogs.py  icons.py  main_window.py  sidebar.py  single_class_selection.py  spell_tabs.py  step_utils.py  workflow_coordinator.py  workflow_navigation.py  workflow_state.py
spell_card_generator/ui/workflow_steps/: __init__.py  base_step.py  class_selection_step.py  documentation_urls_step.py  generation_options_step.py  overwrite_cards_step.py  preview_generate_step.py  secondary_language_step.py  spell_selection_step.py
spell_card_generator/utils/: __init__.py  class_categorization.py  exceptions.py  file_scanner.py  paths.py  validators.py
src/: .latexindent.yaml  a6-on-a4.cfg  a7-on-a4.cfg  cardify.tex  din-a4.cfg  spell_card_generator.py  spellcard-expl3.sty  spellcard.cls  (+19 more)
(+99 files in other folders)
