[tool.poetry]
name = "spell-card-generator"
description = "GUI tool for generating LaTeX spell cards from TSV data"
version = "0.0.1" # this package never intended to be published. Version has no meaning and should not be updated.
authors = ["SoongJr"]
readme = "../README.md"
packages = [{include = "spell_card_generator", from = ".."}]

[tool.poetry.scripts]
spell-card-generator = "spell_card_generator.main:main"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.9"
flake8 = "^7.3.0"
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
# this config is "Black-compatible", see https://black.readthedocs.io/en/latest/guides/using_black_with_other_tools.html
max-line-length = "88"
